Add notes to js_101.md

--- a/exercises/js_101.md
+++ b/exercises/js_101.md
@@ -381,3 +381,384 @@ This will log ['Hello', 'Goodbye'] twice.
 
 This might look similar to Exercise 4, but the key difference is what happens on line 3. As with the previous exercise, when myWords is passed as an argument to the changeMyWords function invocation, it acts like pass-by-reference since myWords is assigned to an array. At this point the myWords variable and the words function parameter both point to the same array, and it is this array that is output when we log words on line 2. On line 3, however, we reassign the words parameter to a new array. Again, it's important to be clear that this reassignment is not the same thing as mutating the array. In this exercise, we don't mutate the array at any point, and so when we log myWords on line 8 we see the array with its original elements.
 
+
+# Variables, Functions, and Blocks
+## Examples
+
+Example 1
+```js
+let myVar = 1;
+
+function myFunc() {
+  myVar = 2;
+}
+
+myFunc();
+console.log(myVar); // 2
+```
+Explanation
+
+This one is fairly straightforward. In this example, the variable myVar is declared and initialized to the number 1 on line 1. This variable is accessible within the scope of the function body of the myFunc function, and so on line 4 we can reassign the myVar variable to the number 2.
+
+This reassignment occurs when we invoke myFunc on line 7, and so when myVar is logged on line 8 the reassigned value is output.
+
+Example 2
+```js
+let myVar = [1];
+
+function myFunc() {
+  myVar = [2];
+}
+
+myFunc();
+console.log(myVar); // [2]
+```
+Explanation
+
+This example is essentially the same as Example 1. We initialize the variable myVar to particular value, in this case an array, on line 1. We then reassign the variable when the myFunc function is invoked on line 7.
+
+The concept at work here is the same: the fact that myVar is accessible within the scope of the function body. The fact that myVar was initialized to a reference type value rather than a primitive value has no bearing on the outcome. It's important to note that we're not mutating the array in any way here, and that the array logged on line 8 is a different array to the one we initialized myVar to on line 1.
+
+Example 3
+```js
+let myVar = [1];
+
+function myFunc() {
+  myVar[0] = 2;
+}
+
+myFunc();
+console.log(myVar); // [2]
+```
+Explanation
+
+The outcome here may seem the same as in Example 2, but there's a key difference here: the array logged on line 8 is the same array that myVar is initialized to on line 1.
+
+Variable scope is still playing its part in that we can access the myVar variable within the scope defined by body of the myFunc function, but there's also another concept at work: mutability. ON line 4, rather than reassigning the myVar variable to a different array, we're mutating the array itself by assigning a different element to index 0 of the array.
+
+Example 4
+```js
+let myVar = 1;
+
+function myFunc(myVar) {
+  myVar = 2;
+}
+
+myFunc();
+console.log(myVar); // 1
+```
+Explanation
+
+At first glance, this example may look identical to Example 1. There's a key difference, however, which is the function parameter myVar on line 3. It's this small detail that leads to the difference in outcome when the code is run.
+
+The concept at work here is variable scope. When the myFunc function is invoked on line 7, JavaScript declares a variable with the name of the parameter myVar within the scope of the function. This is a different variable to the one initialized on line 1, and initially has a value of undefined. The existence of this variable within the scope of the function 'shadows', or blocks access to, the myVar variable in the global scope on line 1. Therefore, line 4 is a reassignment of the function-scoped myVar rather than a reassignment of the myVar declared and initialized on line 1. When that variable is then logged on line 8, it still has its initial value of 1.
+
+Example 5
+```js
+let myVar = [1];
+
+function myFunc(myVar) {
+  myVar = [2];
+}
+
+myFunc();
+console.log(myVar); // [1]
+```
+Explanation
+
+This is essentially the same as Example 4. Although it looks similar to Example 2, again a different myVar variable is being created within the scope of the myFunc function and blocking access to the one declared and initialized on line 1. Line 4 is therefore reassigning the function-scoped myVar to a new array (remember, the myVar parameter would have been initialized to undefined when myFunc is invoked on line 7 because it is given no arguments. Line 4 is a reassignment, not an initialization). Again, the fact that we are dealing with a reference rather than a primitive plays no part here.
+
+Example 6
+```js
+let myVar = [1];
+
+function myFunc(myVar) {
+  myVar[0] = 2; // TypeError: Cannot set properties of undefined (setting '0')
+}
+
+myFunc();
+console.log(myVar);
+```
+Explanation
+
+As with the previous two examples (4 and 5), this is again a situation where the myVar variable scoped to the function blocks access to the myVar declared and initialized on line 1. The difference here is that we are attempting to mutate it as if it was referencing an array. As explained in example 4, however, at this point the function-scoped myVar has a value of undefined, which is a primitive value. Line 4 is essentially undefined[0] = 2; which JavaScript parses as an attempt to set a property 0 on undefined, which isn't possible, hence the TypeError.
+
+Example 7
+```js
+let myVar = 1;
+
+function myFunc(myVar) {
+  myVar = 2;
+}
+
+myFunc(myVar);
+console.log(myVar); // 1
+```
+Explanation
+
+This is almost identical to Example 4, but with one small difference: here we are passing the myVar variable declared and initialized on line 1 as an argument to the myFunc function invocation on line 7. In this case, however, that doesn't make any difference to the outcome.
+
+Because myVar on line 1 is initialized to a primitive value, passing it as an argument to the function acts like pass-by-value. The myVar on line 1 and the myVar scoped to the myFunc function both point to the value 1 but these are two different value 1s that exist at different points in memory. As a result of this, whatever we do to myVar within the scope of the funtion won't affect the value assigned to myVar on line 1.
+
+The fact that we're passing in a primitive value doesn't really come into play in this example though. The primary concept at work is again scope, and for the same reasons outlined in example 4. The function parameter myVar acts like a local variable within the scope of the function, which blocks access to the myVar declared and initialized on line 1. Line 4 is therefore a reassignment of this function-scoped variable.
+
+Example 8
+```js
+let myVar = [1];
+
+function myFunc(myVar) {
+  myVar = [2];
+}
+
+myFunc(myVar);
+console.log(myVar); // [1]
+```
+Explanation
+
+This is similar to Example 7, except that we're passing in a reference type as an argument to the function rather than a primitive. Therefore, when the function is initially executed, the myVar on line 1 and the function-scoped myVar both reference the same array.
+
+The fact that we're dealing with a reference type, however, doesn't really come into play here, beacuse on line 4 we're reassigning the function-scoped myVar to a different array. In that sense, the underlying concepts at work are the same as in Example 7.
+
+Example 9
+```js
+let myVar = [1];
+
+function myFunc(myVar) {
+  myVar[0] = 2;
+}
+
+myFunc(myVar);
+console.log(myVar); // [2]
+```
+Explanation
+
+As with Example 8, we're passing a reference type as an argument to a function invocation. So again, when the myFunc function is executed, the myVar on line 1 and the function-scoped myVar are both referencing the same array. Unlike Example 8, however, here we are mutating that array (rather than reassigning the function-scoped variable). When we log myVar on line 8, therefore, we get the mutated array output.
+
+## Exercises
+Question 1
+What will the following code log to the console and why? 
+
+```js
+let color = "yellow";
+let colors = ["red", "green", "blue"];
+
+function updateColors(colors) {
+  colors.push(color);
+}
+
+updateColors(colors);
+console.log(colors);
+```
+Solution 1
+This logs the array `['red', 'green', 'blue', 'yellow']`.
+
+We declare and initialize two variables:
+
+1. On line 1, the variable color is declared and initialized to the string 'yellow'.
+2. On line 2, the variable colors is declared and initialized to an array containing three strings, 'red', 'green', and 'blue'.
+
+On lines 4-6 we declare the function updateColors. It defines one parameter colors, and within the body of the function calls the push method on that parameter, passing in the variable color. Note that the colors parameter 'shadows', or blocks access to, the colors variable declared in the global scope on line 2.
+
+We invoke the updateColors function on line 8, passing in the colors variable declared on line 2 as an argument. Because the function defined the parameter colors, and because the variable we passed in as an argument points to a reference type value, the colors variable on line 2 and the colors parameter (essentially a variable scoped to the function) both point to the same array. Within function body we call push on this array and pass in the color variable (which the function can access) which has the value of the string 'yellow'. This modifies the array by appending this value as a new element in the array.
+
+On line 9 we log the value of the colors variable declared on line 2. Since this variable points to the same array as the one referenced by the colors parameter in the function, we see the modified value output.
+
+Question 2
+What will the following code log to the console and why? 
+
+```js
+let color = "yellow";
+let colors = ["red", "green", "blue"];
+
+function updateColors(colors, color) {
+  colors.push(color);
+}
+
+updateColors(colors);
+console.log(colors);
+```
+Solution 2
+This logs the array `['red', 'green', 'blue', undefined]`.
+
+The code in this example is almost identical to the code example in Exercise 1, with one key difference: the updateColors function defines a second parameter color. As with Exercise 1, the colors function parameter blocks access to the global colors variable. In the case though, the color function parameter also blocks access to the color global variable.
+
+When we invoke the function, however, we only pass in one argument, the variable colors which references the array ['red', 'green', 'blue']. As before, we call the push method on this array, but rather than pass in the color global variable (which points to the string 'yellow') we instead pass in the color parameter. Since we didn't pass in an argument for color when invoking the function, this parameter has a value of undefined.
+
+The array is still modified, as in Exercise 1, so when we log the colors global variable on line 9 we again see the modified value, but the last element is undefined instead of 'yellow'.
+
+Question 3
+What will the following code log to the console and why? 
+
+```js
+let color1 = "purple";
+let color2 = "pink";
+let colors = ["red", "green", "blue"];
+
+function updateColors(colors, color) {
+  colors.push(color);
+}
+
+updateColors(colors, color1);
+updateColors(colors, color2);
+console.log(colors);
+```
+Solution 3
+This logs the array `['red', 'green', 'blue', 'purple', 'pink']`.
+
+As with Exercise 2, our updateColors function defines two parameters. In this example though, we pass in two arguments when invoking the function. We also invoke the function twice.
+
+We again have a global variable, colors, initialized to an array containing three strings, 'red', 'green', and 'blue'. Here we also have the global variables color1 and color2 initialized to the strings 'purple' and 'pink' respectively.
+
+On the first invocation of updateColors we pass in the colors variable as the first argument and color1 as the second argument. Within the scope of the function, the colors parameter references the same array to which the global colors variable on line 3 points, and the color parameter points to the string value 'purple'. The function mutates the array which colors references, appending the string 'purple'.
+
+Since the global colors variable references the same array as the one we mutated within the function, if we were to log colors at this point (i.e. on line 10) we would see output the mutated array ['red', 'green', 'blue', 'purple']. Instead, however, we invoke the function for a second time. We again pass in the global colors variable as the first argument (remember that the array it references has been mutated, so at this point it has a value of ['red', 'green', 'blue', 'purple']), and as the second argument we pass in color2.
+
+As with the first invocation, the colors parameter again references the same array to which the global colors variable points. The color parameter on this occasion has a value of 'pink', and this value is appended to the array.
+
+Question 4
+What will the following code log to the console and why? 
+
+```js
+let color1 = "purple";
+let color2 = "pink";
+let colors = ["red", "green", "blue"];
+
+function updateColors(colors, color) {
+  colors.push(color);
+  return colors;
+}
+
+let newColors = updateColors(colors, color1);
+updateColors(newColors, color2);
+console.log(colors);
+```
+Solution 4
+As with Exercise 3, this again logs the array ['red', 'green', 'blue', 'purple', 'pink']. There's a difference here in that we return the value of the colors parameter when we invoke the function, and also declare and assign another global variable newColors to that return value. The underlying principles at work are the same, however.
+
+When updateColors is first invoked, we pass in the global colors variable. colors references an array, which at this point has a value of ['red', 'green', 'blue']. We also pass in color1 which has a value of 'purple'. When the function is invoked on line 10, the color parameter is initialized to 'purple' and is appended to the array referenced by the colors parameter. At this point the array referenced by both the colors parameter and the global colors variable has a value of ['red', 'green', 'blue', 'purple']. We then return the value of the colors parameter.
+
+On line 10, we declare and initialize the variable newColors to the return value of the function. Since, within the scope of the function, the colors parameter was assigned to a reference value, the value that the function returns (and hence the value to which newColors is assigned) is a reference to the array. So at this point, the global variables colors and newColors both reference the same array.
+
+On line 11 we again invoke updateColors, passing in newColors as the first argument. We could have also passed in colors, since both variables reference the same array. For the second argument, we pass in color2, which has a value of 'pink'. Just as in Exercise 3, this value is appended to the array referenced by both colors and newColors.
+
+Question 5
+What will the following code log to the console and why? 
+
+```js
+let color = "purple";
+let colors = ["red", "green", "blue"];
+
+function addColor(colors, color) {
+  colors.push(color);
+  return colors;
+}
+
+function removeColor(colors) {
+  color = colors.pop();
+  return colors;
+}
+
+let newColors = removeColor(colors);
+addColor(colors, color);
+console.log(newColors);
+```
+Solution 5
+This logs the array `['red', 'green', 'blue']`.
+
+In some ways this is similar to Exercise 4 except that here we have two functions, both of which mutate the array passed in.
+
+We declare and initialize the global variable color to the string 'purple' on line 1. On line 2, we declare and initialize the global variable colors to an array containing three strings, 'red', 'green', and 'blue'.
+
+We declare two functions:
+
+1. `addColor` which defines two parameters colors and color. It calls push on colors passing in color as an argument and then returns colors.
+2. `removeColor` which defines one parameter colors. It calls pop on colors and then returns colors. (Note that the colors object is mutated.)
+On line 14 we invoke `removeColor`, passing in the global colors variable as an argument. At this point the colors parameter within the scope of the function and the global colors variable both point to the same array ['red', 'green', 'blue']. We then mutate that array by calling the Array method pop on it. This removes the last element of the array, so the array which the colors parameter and the global colors variable both reference now has a value of ['red', 'green']. The function returns a reference to this array, and it is this reference to which newColors is assigned.
+
+A key aspect of this function though, is what happens on line 10. Here we assign color to the return value of colors.pop(). The pop method returns the element that it removes, so in this case that return value is the string 'blue'. What is color though? Since we haven't defined a color parameter, nor declared a new variable of that name within the scope of the function, we need to look outside of the function scope. The color referenced on line 10 is the global color variable that we declared on line 1. Line 10 is therefore a reassignment of this variable.
+
+At this point, once we've invoked `removeColor`, the global color variable has a value of 'blue' and the global colors and newColors variables both point to the same array which has a value of ['red', 'green'].
+
+We then invoke addColor on line 15, passing in the colors and color global variables. Within the scope of the function the colors parameter points to the same array as the global colors variable and the color parameter has the value of 'blue'. We then append the value of color to the array and return a reference to the colors array (though we don't do anything with the return value).
+
+At this point the array to which the global colors and newColors variables both point has a value of `['red', 'green', 'blue']`, and so this is what is output when newColors is logged on line 16.
+
+Question 6
+What will the following code log to the console and why? 
+
+```js
+function capitalize() {
+  return word[0].toUpperCase() + word.slice(1);
+}
+
+function exclaim() {
+  return (word += "!!!");
+}
+
+let word = "hello";
+let capitalizedWord = capitalize(word);
+let exclaimedWord = exclaim(capitalizedWord);
+
+console.log(word);
+console.log(capitalizedWord);
+console.log(exclaimedWord);
+```
+Solution 6
+This will log:
+
+```js
+hello!!!
+Hello
+hello!!!
+```
+Here we have two functions, capitalize and exclaim. Neither function define any parameters, but both return a value.
+
+On line 9, we declare and initialize the global variable word to the string 'hello'.
+
+On line 10, we declare and initialize the global variable capitalizedWord to the return value of invoking capitalize. Within the body of the function a few things happen:
+
+We reference the first letter of word, which is 'h', using bracket notation and call the String method toUpperCase on it. This returns a new string 'H'.
+We call the String method slice on word, passing in the index 1 as an argument. This returns a new string 'ello'.
+We concatenate these two new strings using the + operator to form the new string 'Hello'.
+We then return this string 'Hello', and so capitalizedWord is assigned to this value.
+Note that although we passed in word as an argument to the function invocation, we don't use that argument within the function and the word referenced on line 2 is the global variable word. Since this variable is assigned to a primitive, however, nothing we do on line 2 changes it in any way.
+
+On line 11, we invoke the exclaim function, passing in the capitalizedWord variable. As with the capitalize function invocation we don't use the argument within the function. Within the function, word references the global word variable that was declared on line 9. We reassign this variable to a value which is the initial value of word ('hello') concatenated using the + operator with the string '!!!' to produce a new string 'hello!!!'. As well as reassigning word to this new string, we also return it, assigning exclaimedWord to this value.
+
+After our function invocations therefore, word and exclaimedWord have a value of 'hello!!!' and capitalizedWord has a value of 'Hello'. It is these values we see when we log the three variables on lines 13-15.
+
+Question 7
+What will the following code log to the console and why? 
+
+```js
+function capitalize(word) {
+  return word[0].toUpperCase() + word.slice(1);
+}
+
+function exclaim(word) {
+  return (word += "!!!");
+}
+
+let word = "hello";
+let capitalizedWord = capitalize(word);
+let exclaimedWord = exclaim(capitalizedWord);
+
+console.log(word);
+console.log(capitalizedWord);
+console.log(exclaimedWord);
+```
+Solution 7
+This will log:
+
+```js
+hello
+Hello
+Hello!!!
+```
+At first glance this looks identical to Exercise 6, but there's a key difference: the capitalize and exclaim functions both define a function parameter word.
+
+In the case of the capitalize function this parameter doesn't really make any difference to what happens. We pass in the global variable word as an argument to the function invocation, so the word parameter also has a value of 'hello' but at a different memory location. We then create a new string 'Hello' in the same way as before (concatenating the return value of the toUpperCase and slice method) and return the value of this new string from the function. The global variable capitalizedWord is then assigned to this value.
+
+In the case of exclaim however, the definition and use of a word parameter has a big difference in the final output. When we invoke the exclaim function on line 11 we pass in capitalizedWord as an argument. At this point capitalizedWord and the word parameter in the scope of the function both have the same value 'Hello', though at different places in memory. We then reassign the parameter word to a new string 'Hello!!!' which is its initial value concatenated with the string '!!!'. Note that this doesn't affect the value of the global variable word declared on line 9 since the parameter 'shadows' and blocks access to this variable. The value of the new string 'Hello!!!' is then returned by the function, and it is this value to which exclaimedWord is assigned.
+
+After our function invocations, word still has its initial value of 'hello', capitalizedWord has the value of 'Hello' which was returned by the capitalize function invocation, and exclaimedWord has a value of 'Hello!!!' which was returned by the exclaim function invocation. It is these values we see when we log the three variables on lines 13-15.
