add new exercises to JS_110

--- a/exercises/js_101.md
+++ b/exercises/js_101.md
@@ -236,6 +236,7 @@ myWords = ['Hi', 'Bye'];
 
 console.log(myWords);
 console.log(myOtherWords);
+```
 Solution 4
 This logs the array [ 'Hi', 'Bye' ], and then the array ['Hello', 'Goodbye'].
 
@@ -299,7 +300,7 @@ The function changeMyWord defines one parameter word. It logs the value of that 
 
 On line 6, the variable myWord is declared and initialized to the String 'Hello'. On line 7, we pass in myWord as an argument to the changeMyWord function invocation. At this point, both the myWord variable and the word function parameter have as their value the String 'Hello', so when the changeMyWord function logs the value of word, 'Hello' is logged to console. Crucially though, because we are dealing with a primitive value, the myWord variable and the word function parameter point to different places in memory.
 
-Essentially, passing in myWord as an argument to the changeMyWord function invocation acts like pass-by-value. Because of this, nothing we do with the word parameter in the function, such as calling toUpperCase() on it and re-assigning word, will have any effect on the value of the myWord variable. Therefore, when we log we log the value of `myWord` `Hello` is output. 
+Essentially, passing in myWord as an argument to the changeMyWord function invocation acts like pass-by-value. Because of this, nothing we do with the word parameter in the function, such as calling toUpperCase() on it and re-assigning word, will have any effect on the value of the myWord variable. Therefore, when we log the value of `myWord` `Hello` is output. 
 
 Question 2
 What will the following code log to the console and why? 
@@ -473,7 +474,7 @@ Example 6
 let myVar = [1];
 
 function myFunc(myVar) {
-  myVar[0] = 2; // TypeError: Cannot set properties of undefined (setting '0')
+  myVar[0] = 2; 
 }
 
 myFunc();
@@ -511,7 +512,7 @@ function myFunc(myVar) {
 }
 
 myFunc(myVar);
-console.log(myVar); // [1]
+console.log(myVar); 
 ```
 Explanation
 
